@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+Interface:
+* FeatureStructure has new method add_ufeatures() that performs the dual operation to get_ufeatures().
+
+
+
 2.030     2015-01-21 14:45:58+01:00 Europe/Prague
 
 Features:
